--- a/index.ipynb
+++ b/index.ipynb
@@ -149,19 +149,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    pass"
+    "    if restaurant['rating'] > alternative['rating']:\n",
+    "        return restaurant\n",
+    "    return alternative"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fork & Fig\n",
+      "Fork & Fig\n"
+     ]
+    }
+   ],
    "source": [
     "print(better_restaurant(frontier_restaurant, fork_fig)['name']) # 'Fork & Fig'\n",
     "print(better_restaurant(fork_fig, frontier_restaurant)['name']) # 'Fork & Fig'"
@@ -181,7 +192,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    pass"
+    "    if len"
    ]
   },
   {
@@ -294,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
