--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,8 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for restaurant in restaurants\n",
-    "        if not restaurant['is closed'] "
+    "        if not restaurant['is closed'] :\n",
+    "            "
    ]
   },
   {
