--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
     "    open = []\n",
     "    for restaurant in restaurants\n",
     "        if not restaurant['is closed'] :\n",
-    "            "
+    "            open.append(resta)"
    ]
   },
   {
