--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
     "    open = []\n",
     "    for restaurant in restaurants\n",
     "        if not restaurant['is closed'] :\n",
-    "            open.append(resta)"
+    "            open.append(restaurant)\n",
+    "        "
    ]
   },
   {
