--- a/index.ipynb
+++ b/index.ipynb
@@ -296,7 +296,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    for restaurant in restaurants\n",
+    "    for restaurant in restaurants:\n",
     "        if not restaurant['is closed'] :\n",
     "            open.append(restaurant)\n",
     "    return open"
