--- a/index.ipynb
+++ b/index.ipynb
@@ -281,14 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurant['is closed']:\n",
+    "        if not restaurants['is closed']:\n",
     "            open.append(restaurant)\n",
     "    return open"
    ]
