--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
     "    open = []\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurants['is closed']:\n",
-    "            open.append(restaurant)\n",
+    "            open.append(restaurants)\n",
     "    return open"
    ]
   },
