--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def open_restaurants(restaurants):\n",
+    "def (open_restaurants(restaurants)):\n",
     "    open = []\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurants['is closed']:\n",
