--- a/index.ipynb
+++ b/index.ipynb
@@ -285,11 +285,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def (open_restaurants(restaurants)):\n",
+    "def (open_restaurants(restaurant)):\n",
     "    open = []\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurants['is closed']:\n",
-    "            open.append(restaurants)\n",
+    "        if not restaurant['is closed']:\n",
+    "            open.append(restaurant)\n",
     "    return open"
    ]
   },
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "len(open_restaurants(restaurants)) # 1"
+    "len(open_restaurants(restaurant)) # 1"
    ]
   },
   {
