--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,7 @@
     }
    ],
    "source": [
-    "def (open_restaurants(restaurant)):\n",
+    "def open_restaurants(restaurant)):\n",
     "    open = []\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is closed']:\n",
