Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,11 +272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "restaurants = [fork_fig, frontier_restaurant]"
+    "restaurant = [fork_fig, frontier_restaurant]"
    ]
   },
   {
